--- a/6.webpack打包vue项目.md
+++ b/6.webpack打包vue项目.md
@@ -1,447 +1,68 @@
-# webpack和vue
-
-## 项目结构
-
-复制一份原来的项目，在原来的项目上优化成vue的项目结构。
 
 
+# 项目架构搭建
 
-### 原来的结构
-
-```js
-webpack-demo
-	- config			// webpack配置文件
-		- webpack.base.js
-		- webpack.dev.js
-		- webpack.pro.js
-	- node_modules
-	- public			// 静态资源文件夹
-		- index.html	
-	- src				// 开发目录
-		- images
-		- blue.less
-		- error.js
-		- index.html
-		- style.css
-	- package.json
-```
+省略。。。
 
 
 
-### 复制修改后的结构
+# 全局方案
 
-```js
-news
-	- config			// webpack配置文件
-		- webpack.base.js
-		- webpack.dev.js
-		- webpack.pro.js
-	- node_modules
-	- public			// 静态资源文件夹
-		- index.html	
-	- src				// 开发目录
-		// - 清空src
-	- package.json
-```
+## 1. 获取异步数据
 
-> 注意：只是清空了src，其他文件没变动。
+- 本地模拟数据，通过全局axios请求获取数据
 
+  ```js
+  // main.js
+  import Vue from 'vue/dist/vue.esm.js'
+  import axios from 'axios'
+  import VueAxios from 'vue-axios'
+  
+  Vue.use(axios, VueAxios)
+  
+  ```
 
+  - 组件中使用
 
-## 准备工作
-
-###  项目入口文件
-
-在src目录中新建一个main.js作为项目入口。
-
-`src/main.js`
-
-```js
-import Vue from "vue"
-
-new Vue({
-    el: "#app",
-    data: {
-        message: "hello webpack and vue!"
-    }
-})
-```
-
-
-
-上面代码中引入了vue模块，并且声明了根实例容器为`#app`，所以需要安装`vue模块`和修改`public/index.html`
-
-```
-npm install vue
-```
-
-
-
-`public/index.html`
-
-```html
-<body>
-    <div id="app">
-        {{message}}
-    </div>
-</body>
-```
-
-
-
-修改打包入口文件为`main.js`
-
-`config/webpack.base.js`
-
-```js
-module.exports = {
-    // 入口
-    entry: {
-        main: "./src/main.js"
-    },
+    ```js
+    this.axios.get('/sql/menu.json').then(res => { })
     
-    // 其他配置...
+    // 最终请求路径： localhost:8000/sql/menu.json
+    ```
+
     
-}
-```
 
+  
 
+# 首页菜单部分
 
-执行`npm run dev`打开开发服务器。
+## 1. 组件自调用
 
-
-
-### vue在webpack中的使用
-
-上面的案例是按照我们在浏览器端开发的思路写的，没意外的话`浏览器`会报下面的错误。
-
-```
-[Vue warn]: You are using the runtime-only build of Vue where the template compiler is not available. Either pre-compile the templates into render functions, or use the compiler-included build.
-
-(found in <Root>)
-```
-
-
-
-**原因：**vue有两种形式的代码 compiler（模板）模式和runtime模式（运行时），vue模块的package.json的main字段默认为runtime模式， 指向了"dist/vue.runtime.common.js"位置。
-
-**解决办法：**
-
-1. [网址](https://blog.csdn.net/wxl1555/article/details/83187647)  
-
-   - 在入口文件里，改变vue的引入路径
-
-     ```js
-     import Vue from 'vue/dist/vue.esm.js'
-     //默认是引入 'vue/dist/vue.common.js'
-     ```
-
-2. 将文件转换成模板形式：引入vue的另一个概念，叫做`单文件组件`，单文件组件有以下特征:
-   - 以`.vue`为后缀名结尾
-   - 组件中包含3块内容，分别是`template、script、style`
-   - 单文件属于局部组件
-
-
-下面来创建第一个单文件组件
-
-`src/App.vue`
-
-```vue
-<!--.vue结尾的文件，经过webpack编译后，变成vue的局部组件。后面还要注册-->
+   ```vue
 <template>
-	<!-- template最外层只能包含一个标签,template里的内容直接被塞进根实例中 -->
-  	<div>第一个单文件组件</div>
+  <div>
+    <div>use itself {{data}}</div>
+    <use-self data="我被自己调用了"/>
+  </div>
 </template>
-
-<script>
-// 必须暴露一个对象，对象是组件的配置
-  //这里写实例对象中的属性
-export default {
-
-}
-</script>
-
-
-```
-
-
-
-导入到`src/main.js`
-
-```js
-import Vue from "vue"
-// + 导入App.vue
-import App from "./App.vue"
-
-new Vue({
-    el: "#app",
-
-    // - 删除该data
-    // data: {
-    //     message: "hello webpack and vue!"
-    // }
-    
-  //注册模板    App为引入的模板文件
-    render: function(createElement){
-        return createElement(App)
-    }
-  //可以简写成
-  //render: h => { h(App) }
-})
-```
-
-> 以后根实例不负责模板渲染，`只负责加载一个最底层的组件 App.vue`。
-
-
-
-删除`public/index.html`中的渲染
-
-```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <div id="app">
-        <!-- 删除该插值表达式 -->
-        <!-- {{message}} -->
-    </div>
-</body>
-</html>
-```
-
-
-
-### 下载vue模块加载器
-
-由于组件是以`.vue`结尾的，所以需要添加新的模块加载器 [vue-loader](https://vue-loader.vuejs.org/zh/guide/#%E6%89%8B%E5%8A%A8%E8%AE%BE%E7%BD%AE)
-
-
-
-下载
-
-```
-npm install --save-dev vue-loader vue-template-compiler vue-style-loader
-```
-
-> vue-template-compiler 是附加依赖, 必须要下载。
->
-> vue-style-loader 是负责处理单文件的style样式的，替换原来配置中的 style-loader
-
-
-
-`config/webpack.base.js`
-
-```js
-// 其他引入
-
-// 引入vue-loader插件
-const VueLoaderPlugin = require('vue-loader/lib/plugin')
-
-module.exports = {
-  // 其他配置...
-    
-  	module: {
-    	rules: [
-        	{
-                test: /\.css$/,
-                use: ExtractTextPlugin.extract({
-                    // 替换原来配置中的 style-loader
-                    fallback: "vue-style-loader",
-                    use: ["css-loader"]
-                })
-            },
-            {
-                test: /\.less$/,
-                use: ExtractTextPlugin.extract({
-                    // 替换原来配置中的 style-loader
-                    fallback: "vue-style-loader",
-                    use: ["css-loader", "less-loader"]
-                })
-            },
-      		// 其他加载器...
-        
-            {
-                test: /\.vue$/,
-                use: ['vue-loader']
-			},
-    	]
-  	},
-    
-    plugins: [
-        // 其他插件...
-		
-        // vue加载器插件
-        new VueLoaderPlugin()
-    ]
-}
-```
-
-
-
-##  优化
-
-### 模块解释
-
-增加两个解释功能，方便开发。
-
-1. 增加一个别名指向`src`目录，方便后续项目中查找模块。
-2. 省略导入模块时的后缀名。
-
-
-
-`config/webpack.base.js`
-
-```js
-// 其他引入
-
-// 引入vue-loader插件
-const VueLoaderPlugin = require('vue-loader/lib/plugin')
-
-module.exports = {
-  	// 其他配置...
-    
-    
-    //  + 添加模块解释:在入口模块导入外部文件时，对导入格式作简写
-    resolve: {
-        alias: {
-            // 1.以后@符号就是src目录
-            '@': path.resolve(__dirname, "../src"),
-           
-        },
-          // 2.省略导入模块时的后缀名。
-            extensions: ['.js', '.json', '.vue']
-      
-    },
-    
-    
-  	module: {
-    	// 其他配置...
-  	},
-	
-    // 其他配置...
-}
-```
-
-
-
-### 控制台信息
-
-目前项目启动后控制台信息很杂乱，我们简化下控制台的打印
-
-`config/webpack.dev.js`
-
-```js
-// 其他导入...
-
-module.exports = merge(base, {
-    // 其他配置...
-	
-    // 开发服务器配置
-    devServer: {
-        port: 8000, 
-        stats: 'errors-only'   // + 只打印报错信息
-   },
-})
-```
-
-
-
-## 路由
-
-路由在以前的4个步骤需要注册下
-
-下载路由
-
-```
-npm install vue-router
-```
-
-
-
-注册路由插件
-
-`src/main.js`
-
-```js
-import Vue from 'vue'
-import Router from 'vue-router'
-// 其他导入
-
-Vue.use(Router)
-
-// Vue路由的其他步骤
-
-// 其他代码
-```
-
-
-
-## VW和REM
-
-这里不属于webpack的内容了，只是确认下rem的使用
-
-```vue
-<template>
-    <!-- template最外层只能包含一个标签 -->
-    <div>
-        第一个单文件组件
-        <div class="box"></div>
-    </div>
-</template>
-
 <script>
 export default {
-
+  name: 'UseSelf',
+  prop: ['data']
 }
 </script>
-
-<style>
-/* 组件样式 */
-html{
-    font-size: 10vw;
-}
-    
-body{
-    font-size:16px;
-}
-
-.box{
-    width: 5rem;
-    height:5rem;
-    background: gray;
-}
-</style>
-```
+   ```
 
 
 
+- 原理：相当于在一个`.vue`文件里引入一个组件，只不过这个组件使它自己。并且这个过程会一直递归递归调用
+- name:  给自己命名，方便自调用
+- 传参：通过prop的方式传递参数
+- 注意点：
+  - 死循环：自调用一般用于数组的递归渲染。直到某层children位空时，不再渲染
+  - 渲染页面的数据来源：最好来源于上一层组件，而不应该在本层给数据赋值。避免每次自调用的数据都是一样的
 
 
-## 不熟的部分
-
-### 1. runtime模式下创建一个vue对象参数说明
-
-### 2.路由创建步骤，有些忘了
-
-
-
-
-
-
-
-## webpack配置文件部分
-
-### copy-webpack-plugin
-
-- 作用：将已有的整个文件或者目录复制到构建目录中
-- 案例网址：https://www.jianshu.com/p/5f1229395ca4
-
-### webpack-merge
 
 
 
